--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.uberclone">
+    package="com.example.expertsconnect">
 
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
@@ -12,7 +12,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name=".App"
+        android:name="com.example.expertsconnect.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -33,18 +33,18 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name=".ViewLocationsMapActivity"
+            android:name="com.example.expertsconnect.ViewLocationsMapActivity"
             android:label="@string/title_activity_view_locations_map"></activity>
-        <activity android:name=".DriverRequestListActivity" />
+        <activity android:name="com.example.expertsconnect.DriverRequestListActivity" />
 
         <uses-library
             android:name="org.apache.http.legacy"
             android:required="false" />
 
         <activity
-            android:name=".PassengerActivity"
+            android:name="com.example.expertsconnect.PassengerActivity"
             android:label="@string/title_activity_passenger" />
-        <activity android:name=".MainActivity">
+        <activity android:name="com.example.expertsconnect.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
